--- a/.github/workflows/tproxy.yml
+++ b/.github/workflows/tproxy.yml
@@ -7,6 +7,8 @@ on:
         paths:
             - chinadns+dnsmasq/**
             - tproxy/**
+            - tproxy-tun/**
+            - tproxy-mangle/**
             - .github/workflows/tproxy.yml
 
 env:
