Use offical build instead of self-build binary

--- a/qbittorrent-ee/Dockerfile
+++ b/qbittorrent-ee/Dockerfile
@@ -1,45 +1,27 @@
 FROM alpine:latest as compileOS
 
-ENV QBITTORRENT_VERSION=4.3.1.11 \
-    LIBTORRENT_VERSION=1.2.11
+ENV QBITTORRENT_VERSION=4.3.1.11
 
-ADD https://github.com/c0re100/qBittorrent-Enhanced-Edition/archive/release-${QBITTORRENT_VERSION}.zip /
-ADD https://github.com/arvidn/libtorrent/releases/download/v${LIBTORRENT_VERSION}/libtorrent-rasterbar-${LIBTORRENT_VERSION}.tar.gz /
-
-RUN apk add --no-cache ca-certificates build-base boost-dev qt5-qtsvg-dev qt5-qttools-dev qt5-qtbase-dev file \
-&&  mkdir /sources
-
-# libtorrent
-RUN tar -xvf $(find . -name libtorrent-*) -C /sources \
-&&  cd /sources && cd $(find . -name libtorrent-*) \
-&&  ./configure --disable-debug --enable-encryption CXXFLAGS="-std=c++17" \
-&&  make -j$(nproc) install-strip \
-&&  cd /
+COPY buildfs /
 
 # qBittorrent-Enhanced-Edition
-RUN unzip $(find . -name release-*) -d /sources \
-&&  cd /sources && cd $(find . -name qBittorrent-*) \
-&&  ./configure --disable-gui --disable-stacktrace CXXFLAGS="-std=c++17" \
-&&  make -j$(nproc) install \
-&&  cd /
-
-# copy dependence and other stuff
-RUN ldd /usr/local/bin/qbittorrent-nox | cut -d ">" -f 2 | grep lib | cut -d "(" -f 1|xargs tar -chvf /sources/qbittorrent.tar \
-&&  mkdir /qbittorrent \
-&&  tar -xvf /sources/qbittorrent.tar -C /qbittorrent \
-&&  cp --parents /usr/local/bin/qbittorrent-nox /qbittorrent
+RUN chmod +x /download.sh \
+    && /download.sh \
+    && unzip qbittorrent.zip \
+    && mkdir /qbittorrent \
+    && cp /qbittorrent-nox /qbittorrent
 
 # setup run env
 COPY rootfs /qbittorrent
 
 RUN cd /qbittorrent \
-&&  chmod a+x usr/local/bin/qbittorrent-nox init
+&&  chmod a+x qbittorrent-nox init
 
 # RunOS
 FROM alpine:latest
 
 LABEL maintainer="ly0007@yeah.net" \
-    org.label-schema.name="qBittorrent-ee" \
+    org.label-schema.name="qBittorrent-EE" \
     org.label-schema.vcs-url="https://github.com/LASER-Yi/Dockerfiles"
 
 ENV WEBUI_PORT=8989 \
@@ -53,7 +35,8 @@ COPY --from=compileOS  /qbittorrent  /
 
 RUN apk add --no-cache tzdata curl s6 \
     && rm -rf /var/cache/apk/* \
-    && rm -rf /tmp/*
+    && rm -rf /tmp/* \
+    && mv qbittorrent-nox /usr/local/bin
 
 VOLUME /config
 
