Fix issues with build command

--- a/rpiplay/Dockerfile
+++ b/rpiplay/Dockerfile
@@ -7,11 +7,10 @@ RUN wget https://github.com/raspberrypi/firmware/archive/master.zip \
     && mv firmware-master/opt/vc/ /opt
 
 RUN git clone --depth 1 https://github.com/FD-/RPiPlay.git \
-    pushd RPiPlay \
-    mkdir build \
-    cp /usr/lib/arm-linux-gnueabihf/libdns_sd.so.1 ./build/ \
-    && printf "\nadd_library(dns_sd SHARED IMPORTED GLOBAL)\nset_target_properties(dns_sd PROPERTIES IMPORTED_LOCATION \"./libdns_sd.so.1\")\n" >>./lib/CMakeLists.txt
-
-RUN pushd build \
+    && pushd RPiPlay \
+    && mkdir build \
+    && cp /usr/lib/arm-linux-gnueabihf/libdns_sd.so.1 ./build/ \
+    && printf "\nadd_library(dns_sd SHARED IMPORTED GLOBAL)\nset_target_properties(dns_sd PROPERTIES IMPORTED_LOCATION \"./libdns_sd.so.1\")\n" >>./lib/CMakeLists.txt \
+    && pushd build \
     && cmake .. \
     && make
