Complete the full pipeline

--- a/rpiplay/Dockerfile
+++ b/rpiplay/Dockerfile
@@ -7,10 +7,16 @@ RUN wget https://github.com/raspberrypi/firmware/archive/master.zip \
     && mv firmware-master/opt/vc/ /opt
 
 RUN git clone --depth 1 https://github.com/FD-/RPiPlay.git \
-    && pushd RPiPlay \
+    && cd RPiPlay \
     && mkdir build \
     && cp /usr/lib/arm-linux-gnueabihf/libdns_sd.so.1 ./build/ \
     && printf "\nadd_library(dns_sd SHARED IMPORTED GLOBAL)\nset_target_properties(dns_sd PROPERTIES IMPORTED_LOCATION \"./libdns_sd.so.1\")\n" >>./lib/CMakeLists.txt \
-    && pushd build \
+    && cd build \
     && cmake .. \
     && make
+
+FROM debian:latest
+
+COPY --from=compileOS /RPiPlay/build/rpiplay /RPiPlay/build/lib* /usr/bin/
+
+ENTRYPOINT [ "rpiplay" ]
