Make strongswan auto-build every month

--- a/.github/workflows/strongswan.yml
+++ b/.github/workflows/strongswan.yml
@@ -1,32 +1,29 @@
 name: Strongswan
 
 on:
-    push:
-        branches:
-            - master
-        paths:
-            - strongswan/**
-            - .github/workflows/strongswan.yml
+  schedule:
+    - cron: '0 0 1 * *'
+  workflow_dispatch:
 
 env:
-    REPO_NAME: ly0007/strongswan
+  REPO_NAME: ly0007/strongswan
 
 jobs:
-    Build:
-        runs-on: ubuntu-latest
-        steps:
-            - name: Checkout
-              uses: actions/checkout@v2
-            - name: Setup BuildX
-              uses: crazy-max/ghaction-docker-buildx@v3
-              with:
-                buildx-version: latest
-                qemu-version: latest
-            - name: Login
-              run: docker login -u ${{secrets.DOCKER_ID}} -p ${{secrets.DOCKER_PWD}}
-            - name: Build & Push
-              run: docker buildx build 
-               --platform=linux/amd64,linux/arm/v7,linux/arm64 
-               --tag $REPO_NAME:latest 
-               --push 
-               ./strongswan
+  Build:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Setup BuildX
+        uses: crazy-max/ghaction-docker-buildx@v3
+        with:
+          buildx-version: latest
+          qemu-version: latest
+      - name: Login
+        run: docker login -u ${{secrets.DOCKER_ID}} -p ${{secrets.DOCKER_PWD}}
+      - name: Build & Push
+        run: docker buildx build
+          --platform=linux/amd64,linux/arm/v7,linux/arm64
+          --tag $REPO_NAME:latest
+          --push
+          ./strongswan
