--- a/.github/workflows/nginx-brotli.yml
+++ b/.github/workflows/nginx-brotli.yml
@@ -17,16 +17,19 @@ jobs:
         with:
           repository: 'nginxinc/docker-nginx'
 
-      - name: Setup BuildX
-        uses: docker/setup-buildx-action@v1
+      # - name: Setup BuildX
+      #   uses: docker/setup-buildx-action@v1
 
       - name: Login
         run: docker login -u ${{secrets.DOCKER_ID}} -p ${{secrets.DOCKER_PWD}}
 
-      - name: Build & Push
-        run: docker buildx build
-          --build-arg ENABLED_MODULES="brotli"
-          --platform=linux/amd64,linux/arm64
-          --tag $REPO_NAME:alpine
-          --push
-          ./mainline/alpine
+      - name: Build
+        run: docker build --build-arg ENABLED_MODULES="brotli" ./mainline/alpine
+
+      # - name: Build & Push
+      #   run: docker buildx build
+      #     --build-arg ENABLED_MODULES="brotli"
+      #     --platform=linux/amd64
+      #     --tag $REPO_NAME:alpine
+      #     --push
+      #     ./mainline/alpine
