--- a/.github/workflows/nginx-brotli.yml
+++ b/.github/workflows/nginx-brotli.yml
@@ -23,13 +23,10 @@ jobs:
       - name: Login
         run: docker login -u ${{secrets.DOCKER_ID}} -p ${{secrets.DOCKER_PWD}}
 
-      - name: Build
-        run: docker build --build-arg ENABLED_MODULES="brotli" ./mainline/alpine
-
-      # - name: Build & Push
-      #   run: docker buildx build
-      #     --build-arg ENABLED_MODULES="brotli"
-      #     --platform=linux/amd64
-      #     --tag $REPO_NAME:alpine
-      #     --push
-      #     ./mainline/alpine
+      - name: Build & Push
+        run: docker buildx build
+          --build-arg ENABLED_MODULES="brotli"
+          --platform=linux/amd64
+          --tag $REPO_NAME:alpine
+          --push
+          ./modules/Dockerfile.alpine
