--- a/.github/workflows/nginx-brotli.yml
+++ b/.github/workflows/nginx-brotli.yml
@@ -27,7 +27,6 @@ jobs:
         run: docker buildx build
           --build-arg ENABLED_MODULES="brotli"
           --platform=linux/amd64
-          --tag $REPO_NAME:alpine
+          --tag $REPO_NAME:latest
           --push
-          -f Dockerfile.alpine
           ./modules
