--- a/.github/workflows/nginx-brotli.yml
+++ b/.github/workflows/nginx-brotli.yml
@@ -17,16 +17,24 @@ jobs:
         with:
           repository: 'nginxinc/docker-nginx'
 
-      # - name: Setup BuildX
-      #   uses: docker/setup-buildx-action@v1
+      - name: Setup BuildX
+        uses: docker/setup-buildx-action@v1
 
       - name: Login
         run: docker login -u ${{secrets.DOCKER_ID}} -p ${{secrets.DOCKER_PWD}}
 
-      - name: Build & Push
+      - name: Build Debian & Push
         run: docker buildx build
           --build-arg ENABLED_MODULES="brotli"
-          --platform=linux/amd64
+          --platform=linux/amd64,linux/arm/v7,linux/arm64
           --tag $REPO_NAME:latest
           --push
           ./modules
+          
+      - name: Build Alpine & Push
+        run: docker buildx build
+          --build-arg ENABLED_MODULES="brotli"
+          --platform=linux/amd64,linux/arm/v7,linux/arm64
+          --tag $REPO_NAME:alpine
+          --push
+          ./modules/Dockerfile.alpine
