--- a/nextcloud/Dockerfile
+++ b/nextcloud/Dockerfile
@@ -1,6 +1,7 @@
 FROM nextcloud:latest
 
 RUN apt-get update \
-    && apt-get install software-properties-common \
-    && add-apt-repository universe && apt upgrade \
-    && apt-get install ffmpeg imagemagick ghostscript exiftool
+    && apt-get install -y software-properties-common \
+    && add-apt-repository universe && apt -y upgrade \
+    && apt-get install -y ffmpeg imagemagick ghostscript exiftool \
+    && apt-get clean
