update required tools

--- a/nextcloud/Dockerfile
+++ b/nextcloud/Dockerfile
@@ -1,5 +1,5 @@
 FROM nextcloud:latest
 
 RUN apt-get update \
-    && apt-get install -y ffmpeg imagemagick ghostscript exiftool \
+    && apt-get install -y ffmpeg imagemagick ghostscript exiftool unrar p7zip p7zip-full \
     && apt-get clean
